z-index change to fix overlap issue.

--- a/css/unifaction-base.css
+++ b/css/unifaction-base.css
@@ -254,7 +254,7 @@ a.button { line-height:45px; vertical-align:middle; padding:8px 13px 8px 13px; b
 ***********************/
 
 /* Core Panel */
-#panel-core { position:fixed; left:0px; top:60px; }
+#panel-core { position:fixed; left:0px; top:60px; z-index:10; }
 
 #core-uni { height:37px; background-color:#79bbff; border-bottom:solid 1px #2c7099; }
 
